# fitn

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_v3.1.4.md  CRITICAL_ANALYSIS.md  LICENSE  README.md  REAUDIT.md  conftest.py  pyproject.toml  worklog.md
content_files/: all_exercise_urls.json  all_exercises.json
data/raw/: curate_database_uploaded.py  recipe_database_raw.json
docs/: MOBILE_APP_PLAN.md
docs/audit_reports/: ANALYSIS_v3.1.1.md  CURATE_CRITIQUE.md
download/: fitness_engine_reference_guide.md  sample_plan_bodyweight_recomp.json  sample_plan_bodyweight_recomp_prepost.json  sample_plan_bulk.json  sample_plan_cut.json  sample_plan_female_maintenance.json  sample_plan_recomp.json  sample_plan_vegan_ethiopian_maintenance.json  sample_plan_vegan_maintenance.json
download/fitn/: .gitignore  README.md
fitn_app/: README.md
fitn_engine/lib/: fitn_engine.dart
fitn_engine/test/: snapshot_test.dart
fitness_engine/: __init__.py  engine.py
fitness_engine/assessment/: __init__.py  _thresholds.py  assessor.py  body_composition.py  decision.py  health_risk.py  muscular_potential.py
fitness_engine/data/: __init__.py  all_exercises.json
fitness_engine/meal_plan/: __init__.py  _allergen_constants.py  allocator.py  allocator_v2.py  food_database.py  meal_templates.py  planner.py  planner_v2.py  pre_post_workout.py  profile_requirements.py  recipe_database.json  recipe_database_uncurated.json  recipe_loader.py  recipe_scaler.py  recipe_scorer.py  swap_system.py
fitness_engine/models/: __init__.py  assessment.py  meal.py  nutrition.py  preferences.py  profile.py  training.py
fitness_engine/nutrition/: __init__.py  adjustments.py  calories.py  hydration.py  macros.py  micronutrients.py  planner.py  rmr.py  tdee.py
fitness_engine/tests/: __init__.py  test_adjustments.py  test_allergen_detection.py  test_assessment.py  test_engine.py  test_engine_flow.py  test_meal_allocations.py  test_meal_plan_regressions.py  test_meal_planning.py  test_meal_totals.py  test_nutrition.py  test_nutrition_regressions.py  test_phase2.py  test_phase4.py  test_phase5.py  test_phase6_regression_fixes.py  test_phase6_regressions.py  (+6 more)
reports/: CLEANUP_PLAN.md  rippedbody_insights.md  task-2A-body-composition-analysis.md  task_2D_adaptive_tdee_calculator_analysis.md
scripts/: backfill_overviews.py  curate_recipe_db.py  curate_recipes.py  extract_text.py  fetch_resources.py  fetch_resources_retry.py  generate_engine_data.py  recipe_curator.py  sample_runner.py
tool-results/: bash_1782752102997_3b66d55a919c.txt  bash_1782752699685_c1c1bfa245f6.txt  grep_1781847047290_65660302e5c5.txt  read_1781847014330_0f06904bd2c4.txt  read_1781847015071_645946b49d6f.txt  read_1781847015492_fcd50da3ff18.txt  read_1781847017315_55f1fc8db233.txt  read_1781847018117_2e357e972e28.txt  read_1781847018838_50dfae808401.txt  read_1781847030336_f738db19eba3.txt  read_1781847032592_9a54597505f5.txt  read_1781847037721_20626f2eaf21.txt  read_1781847051919_52029781fe9f.txt  read_1781847611017_23ade3bb08b5.txt  read_1782752083317_c0ab47f5c77e.txt  read_1782752096963_a337e70a9b0d.txt  read_1782752385822_c1b54adb6f37.txt  read_1782752393438_c009e9f5d094.txt  read_1782752687581_d42e4aeda8b2.txt  read_1782752696805_8df3b655637b.txt  read_1782752706832_bffc23fb4f85.txt
upload/: fitn_flutter_spec.md  recipe_database_uncurated.json
(+246 files in other folders)
